--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "description": "Backend server for KrishiLink agricultural platform",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "agriculture",
     "farming",
-    "backend",
-    "api"
+    "api",
+    "nodejs"
   ],
   "author": "Your Name",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
@@ -24,5 +24,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
